force-app/main/default/objects/Exception_Log__c/Exception_Log__c.object-meta.xml
<CustomObject>
    <description>Context information from transactions where unhandled errors occurred, used to aid troubleshooting</description>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Exception Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>