force-app/main/default/objects/Exception_Log__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>From a checked exception</description>
    <label>Line Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>