force-app/main/default/objects/Exception_Log__c/fields/Related_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_Record__c</fullName>
    <description>The ID(s) of the primary record(s) associated with this exception.</description>
    <label>Related Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>