force-app/main/default/objects/Exception_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source__c</columns>
    <columns>Message__c</columns>
    <columns>User__c</columns>
    <columns>Related_Record__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Trigger-CampaignMembers</value>
    </filters>
    <label>All</label>
</ListView>